fix(css): align font-awesome icons in buttons

--- a/src/BioEngine.Admin/Web/src/index.scss
+++ b/src/BioEngine.Admin/Web/src/index.scss
@@ -47,6 +47,10 @@ body {
     display: block;
   }
 
+  .ant-btn-icon-only > .anticon-fa {
+    font-size: 18px;
+  }
+
   .add-block-button .ant-btn {
     height: 36px;
     font-size: 18px;
